RESOLVED FIXED134389
[MSE] http/tests/media/media-source/mediasource-append-buffer.html is failing
https://bugs.webkit.org/show_bug.cgi?id=134389
Summary [MSE] http/tests/media/media-source/mediasource-append-buffer.html is failing
Jer Noble
Reported 2014-06-27 01:05:25 PDT
[MSE] http/tests/media/media-source/mediasource-append-buffer.html is failing
Attachments
Patch (3.62 KB, patch)
2014-06-27 01:09 PDT, Jer Noble
eric.carlson: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (531.77 KB, application/zip)
2014-06-27 02:13 PDT, Build Bot
no flags
Jer Noble
Comment 1 2014-06-27 01:09:03 PDT
Build Bot
Comment 2 2014-06-27 02:13:50 PDT
Comment on attachment 233970 [details] Patch Attachment 233970 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5422337700659200 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 3 2014-06-27 02:13:55 PDT
Created attachment 233974 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Jer Noble
Comment 4 2014-06-27 11:54:39 PDT
Note You need to log in before you can comment on or make changes to this bug.